# open-files

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.githooks/: pre-commit
.github/workflows/: secret-scan.yml
docs/release/: tauri-ios-macos.md
scripts/: release-credentials-doctor.mjs  secret-scan.mjs
src/: App.tsx  DocumentFrame.tsx  Sidebar.tsx  fileTypes.ts  main.tsx  outline.ts  renderMarkdown.ts  store.ts  styles.css  theme.tsx  tocInteractions.ts  useFileLoader.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: fileTypes.test.ts  outline.test.ts  tocInteractions.test.ts
src/viewers/: DirectoryViewer.tsx  EpubViewer.tsx  JsonViewer.tsx  JsonlViewer.tsx  MarkdownViewer.tsx  MermaidViewer.tsx  PdfViewer.tsx  TextViewer.tsx
